Creating MVC  for  Fields

--- a/app/views/fields/_field.html.erb
+++ b/app/views/fields/_field.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%= field.name %></td>
-  <td><%= field.shape %></td>
+  <td><%#= field.shape %></td>
   <td><%= link_to 'Show', field %></td>
   <td><%= link_to 'Edit', edit_field_path(field) %></td>
   <td><%= link_to 'Destroy', field, method: :delete, data: { confirm: 'Are you sure?' } %></td>
