--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -68,4 +68,18 @@ div {
   }
 }
 
-#map { height: 180px; }
+#map {
+  height: 500px;
+  width: 975px;
+  margin: 10px 20px;
+  display: inline-block;
+  position: absolute;
+  left: 235px;
+  top: 90px;
+}
+
+#content {
+  float: left;
+  width: 200px;
+  vertical-align: top;
+}
