--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -1,41 +1,34 @@
+<h1>Showing Field</h1>
+<div id="content">
+<p>Name: <%= @field.name %></p>
+<%= link_to 'Edit', edit_field_path(@field) %> |
+<%= link_to 'Back', fields_path %> |
+<%= link_to 'Destroy', @field, method: :delete, data: { confirm: 'Are you sure?' } %>
 <p id="notice"><%= notice %></p>
+</div>
 
 <div id="map"></div>
 <script type='text/javascript'>
-    //var map = L.map('map').setView([51.505, -0.09], 13);
-    var map = L.map('map');
 
-    map.setView([51.505, -0.09], 13);
+    //var cloudmadeUrl = 'http://{s}.tile.osm.org/{z}/{x}/{y}.png'
 
-    //L.tileLayer('http://{s}.tiles.mapbox.com/v3/MapID/{z}/{x}/{y}.png', {
-    //    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-    //    maxZoom: 18
-    //}).addTo(map);
+    var map = L.map('map').setView([51.505, -0.09], 13);
 
-
+    // add an OpenStreetMap tile layer
     L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
 
-    var polygon = L.polygon([
-        [51.509, -0.08],
-        [51.503, -0.06],
-        [51.51, -0.047]
-    ]).addTo(map);
+//    var polygon = L.polygon([
+//        [51.509, -0.08],
+//        [51.503, -0.06],
+//        [51.51, -0.047]
+//    ]).addTo(map);
 
-//    var polyline = L.polyline([[56.3271,44.0074],[56.3193,44.0269],[56.3247,44.0092]],
-//            {color: 'red',
-//                weight: 3,
-//                opacity: 0.5,
-//                smoothFactor: 1}).addTo(map);
-//    map.fitBounds(polyline.getBounds());
+    bounds = <%= @field.leaflet_shape[:geometry][:coordinates][0] %>;
+    L.polygon(bounds)
+            .setStyle({color: '#009933'})
+            .addTo(map);
+    map.fitBounds(bounds);
 
 </script>
-
-
-<%= @field.shape %>
-
-<br/>
-
-<%= link_to 'Edit', edit_field_path(@field) %> |
-<%= link_to 'Back', fields_path %>
