--- a/app/views/fields/edit.html.erb
+++ b/app/views/fields/edit.html.erb
@@ -15,7 +15,7 @@
             shape = layer.toGeoJSON();
             shape_for_db = JSON.stringify(shape);
 
-            $("#field_shape").val(shape_for_db)
+            $("#field_shape").val(shape_for_db);
         });
     });
 
