--- a/app/views/fields/new.html.erb
+++ b/app/views/fields/new.html.erb
@@ -27,7 +27,7 @@
     });
 
     map.on('draw:deleted', function (e) {
-        shape_for_db = null
+        shape_for_db = null;
         $("#field_shape").val(shape_for_db)
     });
 
