--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -11,7 +11,7 @@
     <thead>
     <tr>
       <th>Name</th>
-      <th>Shape</th>
+      <th>Actions</th>
       <th colspan="3"></th>
     </tr>
     </thead>
@@ -26,8 +26,6 @@
 <div id="map" style="width: 975px; margin: 10px 20px; display: inline-block;"></div>
 <script type='text/javascript'>
 
-    //var cloudmadeUrl = 'http://{s}.tile.osm.org/{z}/{x}/{y}.png'
-
     var map = L.map('map').setView([51.505, -0.09], 13);
 
     // add an OpenStreetMap tile layer
@@ -35,27 +33,16 @@
         attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
 
-    //    var polygon = L.polygon([
-    //        [51.509, -0.08],
-    //        [51.503, -0.06],
-    //        [51.51, -0.047]
-    //    ]).addTo(map);
-
-    polygon_array = []
+    polygon_array = [];
     <% @fields.each do |f| %>
     bounds = <%= f.leaflet_shape[:geometry][:coordinates][0] %>;
     polygon = L.polygon(bounds);
-//    polygon._leaflet_id = <%= f.id %>;
-//            console.log(polygon._leaflet_id);
-    polygon.redirect_url = "<%= field_url(f) %>"
-
-    polygon_array.push(polygon)
-
+    polygon.redirect_url = "<%= field_url(f) %>";
+    polygon_array.push(polygon);
     <% end %>
 
     group = L.featureGroup(polygon_array)
             .on('layeradd', function(e){
-                console.log(e.layer.getBounds())
                 map.fitBounds(e.layer.getBounds());
             })
             .on('click', function(e){
